fixed spacing

--- a/project/src/Components/ProfileTab/ProfileTab.css
+++ b/project/src/Components/ProfileTab/ProfileTab.css
@@ -7,7 +7,7 @@
 }
 
 .parent{
-    margin-top: 20vh;
+    margin-top: 10vh;
     margin-left: 20vh;
 }
 
@@ -22,20 +22,16 @@
 }
 
 .friendSearch{
-    margin-top: 10vh;
-    margin-bottom: 0vh;
     position: relative;
 }
 
 .friends{
+    padding-top: 20vh;
     font-size: calc(5px + 1.75vmin);
-    margin-bottom: 0vh;
 }
 
 .User{
-    margin-top: 1vh;
-    margin-left: 0.2vh;
-    padding-left: 1.5vh;
+    padding-left: 1vh;
     text-align: left;
     display: flex;
     justify-content: left;
@@ -44,17 +40,14 @@
 }
 
 .search{
+    padding-top: 2vh;
     font-size: calc(5px + 1.5vmin);
 }
 
-.search-box{
+input-group mb-3{
     padding-left: 10px;
     width: auto;
     height: auto;
-}
-
-.button{
-    margin-top:10px
 }
 
 .error{
